feat: create the runtime image automatically via jpackage
Instead of creating a custom runtime manually by running jlink, jpackage
will now create a minimal runtime image. This bakes all dependencies
directly into the image and gets rid of the individual jar files within
`lib/app/mods`.

Due to a bug in jsvg 2.0.0 a temporary switch to the 2.0.1-SNAPSHOT version
was necessary - see: https://github.com/weisJ/jsvg/issues/134